force-app/main/default/objects/AG_Questionnaire_Template__c/AG_Questionnaire_Template__c.object-meta.xml
<CustomObject>
    <label>Questionnaire Template</label>
    <nameField>
        <displayFormat>TQ-{000000}</displayFormat>
        <label>Template  ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaire Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>