force-app/main/default/objects/AG_Questionnaire_Template__c/fields/AG_Question__c.field-meta.xml
<CustomField>
    <fullName>AG_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <referenceTo>AG_Question__c</referenceTo>
    <relationshipLabel>Questionnaire Templates</relationshipLabel>
    <relationshipName>Template_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>