force-app/main/default/objects/AG_Questionnaire_Template__c/fields/AG_Template__c.field-meta.xml
<CustomField>
    <fullName>AG_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <referenceTo>AG_Template__c</referenceTo>
    <relationshipName>Template_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>